# mcs-red

./: .gitignore  README.md  b_time_to_sell.ipynb  c_cost_involved.ipynb  countries_with_hpi.parquet  country_similarity.ipynb  equations_system.ipynb  gdp_values.parquet  hpi_countries.parquet  mean_std_market_condition.ipynb  msc_cir_5paths.ipynb  obtain_image_example.ipynb  performance_log.csv  proceso.txt  pyproject.toml  resampling_similarity_test.ipynb  scrape_agricultural_land_links.ipynb  scrape_cpi_links.ipynb  scrape_cpi_links_index.ipynb  scrape_gdp_links.ipynb  scrape_gdp_links_indexes.ipynb  scrape_government_expenditure_links.ipynb  scrape_house_price_index.ipynb  scrape_house_price_links.ipynb  scrape_house_price_links_.py  scrape_investment_growth_links.ipynb  scrape_investment_growth_links_index.ipynb  scrape_labor_force_links.ipynb  scrape_live_stock_production_links.ipynb  scrape_private_sector_credit_links.ipynb  scrape_private_sector_credit_links_index.ipynb  scrape_reserves_monthly_links.ipynb  scrape_unemployment_rate_links.ipynb  scrape_urban_pop_links.ipynb  sistema_ecuaciones.ipynb  transform_pipeline.ipynb
.github/ISSUE_TEMPLATE/: development-journal.md
etl_process/: ETL_pipeline.ipynb  extract_path_to_png.ipynb  performance_log.csv  time_performance.ipynb
etl_process/crawlers/: scrape_agricultural_land_links_image.ipynb  (+9 more)
python_finance_simulations_statistics/: a_market_conditions.ipynb  absortion_rate_correlation.ipynb  country_similarity.ipynb  msc_gbm_10paths.ipynb  time_to_sell_volatillity_as_is.ipynb  volatility_time_to_sell.ipynb
