[project]
name = "mcs-red"
version = "0.1.0"
description = "\"Monte Carlo Simulation for Real Estate Strategy\""
authors = [
    {name = "Lucas",email = "88989607+acostadlucas@users.noreply.github.com"}
]
license = {text = "\"GPL-3.0\""}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.3.1,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
notebook = "^7.4.4"

